# Photo-Manager

./: Cargo.toml  README.md
file-system-adaptor/: Cargo.toml
file-system-adaptor/src/: lib.rs
memory-adaptor/: Cargo.toml
memory-adaptor/src/: lib.rs
web-server/: Cargo.toml
web-server/src/: main.rs
