[package]
name = "web-server"
version = "0.1.0"
edition = "2021"
authors = ["Kushagra Gupta <kushgpt08@gmail.com>"]
rust-version = "1.79"
license = "MIT"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
tower-http = { version = "0.5.0", features = [
    "limit",
    "trace",
    "normalize-path",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum-macros = "0.4.1"

library = { path = "../library" }
memory-adaptor = { path = "../memory-adaptor" }
